Parse transfer characteristics from ICC profiles

BUG: 459117
Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1667>