plugins/color/lcms2engine/colorprofiles/LcmsColorProfileContainer.cpp
@@ -11,10 +11,11 @@
 
 #include "LcmsColorProfileContainer.h"
 
+#include <QGenericMatrix>
+#include <QTransform>
+#include <array>
 #include <cfloat>
 #include <cmath>
-#include <QTransform>
-#include <QGenericMatrix>
 
 #include <QDebug>
 
@@ -571,6 +572,36 @@ QByteArray LcmsColorProfileContainer::getProfileUniqueId() const
     return d->uniqueId;
 }
 
+bool LcmsColorProfileContainer::compareTRC(TransferCharacteristics characteristics, float error) const
+{
+    if (!d->hasTRC) {
+        return false;
+    }
+
+    std::array<cmsFloat32Number, 2> calcValues{};
+
+    cmsToneCurve *mainCurve = [&]() {
+        if (d->hasColorants) {
+            return d->redTRC;
+        }
+        return d->grayTRC;
+    }();
+
+    cmsToneCurve *compareCurve = transferFunction(characteristics);
+
+    // Number of sweep samples across the curve
+    for (uint32_t i = 0; i < 32; i++) {
+        const float step = float(i) / 31.0f;
+        calcValues[0] = cmsEvalToneCurveFloat(mainCurve, step);
+        calcValues[1] = cmsEvalToneCurveFloat(compareCurve, step);
+        if (std::fabsf(calcValues[0] - calcValues[1]) >= error) {
+            return false;
+        }
+    }
+
+    return true;
+}
+
 cmsToneCurve *LcmsColorProfileContainer::transferFunction(TransferCharacteristics transferFunction)
 {
     cmsToneCurve *mainCurve;
@@ -593,6 +624,8 @@ cmsToneCurve *LcmsColorProfileContainer::transferFunction(TransferCharacteristic
 
     cmsFloat64Number log_100[5] = {1.0, 10, 2.0, -2.0, 0.0};
     cmsFloat64Number log_100_sqrt[5] = {1.0, 10, 2.5, -2.5, 0.0};
+
+    cmsFloat64Number labl_parameters[5] = {3.0, 0.862076, 0.137924, 0.110703, 0.080002};
 
     switch (transferFunction) {
     case TRC_IEC_61966_2_4:
@@ -628,8 +661,8 @@ cmsToneCurve *LcmsColorProfileContainer::transferFunction(TransferCharacteristic
         mainCurve = cmsBuildParametricToneCurve(NULL, 8, log_100_sqrt);
         break;
     case TRC_A98:
-        //gamma 256/563
-        mainCurve = cmsBuildGamma(NULL, 256.0/563);
+        // gamma 563/256
+        mainCurve = cmsBuildGamma(NULL, 563.0 / 256.0);
         break;
     case TRC_PROPHOTO:
         mainCurve = cmsBuildParametricToneCurve(NULL, 4, prophoto_parameters);
@@ -639,6 +672,9 @@ cmsToneCurve *LcmsColorProfileContainer::transferFunction(TransferCharacteristic
         break;
     case TRC_GAMMA_2_4:
         mainCurve = cmsBuildGamma(NULL, 2.4);
+        break;
+    case TRC_LAB_L:
+        mainCurve = cmsBuildParametricToneCurve(NULL, 4, labl_parameters);
         break;
     case TRC_SMPTE_ST_428_1:
         // Requires an a*X^y construction, not possible.
