plugins/color/lcms2engine/colorprofiles/LcmsColorProfileContainer.h
@@ -93,6 +93,8 @@ public:
     QString info() const override;
     QByteArray getProfileUniqueId() const override;
 
+    bool compareTRC(TransferCharacteristics characteristics, float error) const override;
+
     static cmsToneCurve* transferFunction(TransferCharacteristics transferFunction);
 
 protected:
